hyperlinks and form controls in a <caption> can't be tabbed to
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
People
(Reporter: sophia, Assigned: emilio)
References
(Blocks 5 open bugs)
Details
(Keywords: access)
Attachments
(2 files, 6 obsolete files)
Comment 1•22 years ago
|
||
Updated•22 years ago
|
Updated•22 years ago
|
Comment 2•21 years ago
|
||
Updated•20 years ago
|
Updated•20 years ago
|
Updated•17 years ago
|
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Comment 8•13 years ago
|
||
Comment 9•13 years ago
|
||
Comment 10•13 years ago
|
||
Comment 11•13 years ago
|
||
Comment 12•13 years ago
|
||
Comment 13•13 years ago
|
||
Comment 14•13 years ago
|
||
Comment 15•13 years ago
|
||
Comment 16•13 years ago
|
||
Comment 17•13 years ago
|
||
Comment 19•13 years ago
|
||
Comment 20•13 years ago
|
||
Comment 21•13 years ago
|
||
Comment 22•13 years ago
|
||
Updated•13 years ago
|
Comment 23•13 years ago
|
||
Comment 24•13 years ago
|
||
Comment 25•13 years ago
|
||
Comment 27•11 years ago
|
||
| Comment hidden (me-too) |
Comment 30•9 years ago
|
||
Updated•7 years ago
|
Updated•7 years ago
|
Comment 31•7 years ago
|
||
Updated•3 years ago
|
Comment 32•3 years ago
|
||
The bug assignee is inactive on Bugzilla, so the assignee is being reset.
Comment 33•3 years ago
|
||
Still reproducible, but the URL is not available.
Align the severity to bug 1960188.
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
nsTableWrapperFrame does not have captions as normal children. Instead,
it has it as mCaptionFrames and they can be retrieved with
GetChildList(FrameChildListID::Caption).
Fortunately, currently caption-side is top or bottom, so, we can assume
that captions are children before its normal first child if caption-side: top
and after its last child if caption-side: bottom.
This patch treat the caption frames as "pseudo children" before/after normal
children and make the accessors of sibling frame treat they are consecutive.
| Assignee | ||
Comment 39•1 year ago
|
||
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Comment 40•1 year ago
|
||
Fwiw I agree with mats that long term we should use dom tree order for focus (we already do that for shadow dom iiuc)
| Assignee | ||
Comment 41•1 year ago
|
||
Masayuki, could you look into using the DOM traversal everywhere (not just on shadow dom) for focus navigation? That'd fix probably a variety of fun bugs in this area too, and should match other browsers. Separate bug is fine, I'll try to finish comment 39.
Hmm, I'm afraid the big change only for this case because that could cause a lot of regression reports and I'd be involved them. For the long term solution, I agree with that, but I think I don't have much time to touch the risky change for now... (I already have some ongoing big changes, so, I'd be involved regressions of them soon.)
Updated•1 year ago
|
Comment 43•1 year ago
|
||
Comment 44•1 year ago
|
||
| bugherder | ||
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 47•1 year ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- See https://wiki.mozilla.org/Release_Management/Requesting_an_Uplift for documentation on how to request an uplift.
- If no, please set
status-firefox139towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Description
•